# ComfyUI_Primere_Nodes

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
Nodes/: Dashboard.py  Inputs.py  Networks.py  Outputs.py  Rasterix.py  Segments.py  Styles.py  Uniapi.py  Visuals.py
Toml/: default_neg.toml  default_pos.toml  emotions_style.toml  lens_styles.toml  mj_styles.toml  prompts.example.toml  resolution_ratios.toml  stylepile.toml
Workflow/: Primere_advanced_workflow.json  Primere_basic_production_plus_workflow.json  Primere_basic_production_workflow.json  Primere_basic_workflow.json  Primere_full_workflow.json  Primere_latest_workflow.json  Primere_minimal_workflow.json  Primere_mjstyles_workflow.json  Primere_wf_1.10.json  Primere_wf_1.11.json  Primere_wf_1.12.json  Primere_wf_1.13.json  civitai-all-refiner.json  civitai-face-refiner.json  civitai-hair-refiner.json  civitai-hand-refiner.json  civitai-image-recycler.json  civitai-llm-enhancer.json  civitai-modelconcepts.json  civitai-rewear-refiner.json  civitai-rewear-rehair-refiner.json  clip_encoder_comparison.json  debug_resolution_nodes.json  dynamic_resolver.json  exif_reader.json  segsdetector_dev.json
components/: clipping.py  detectors.py  file_output.py  hypernetwork.py  latentnoise.py  llm_enhancer.py  models.py  nf4_helper.py  path_selector_state.py  primeresamplers.py  primereserver.py  sana_utils.py  stylehandler.py  tree.py  utility.py
front_end/: api_schemas.example.json  api_schemas.json  frontend_helper.js  model_concepts.js  primere_dashboard.js  primere_keywords.js  (+11 more)
(+286 files in other folders)
